# nfo-maker

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: main.rs
