[package]
name = "nfo-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
regex = "1.5.5"
